@@ -4,7 +4,8 @@ Version 0.1-5
 =============
 
 NEW FEATURES
-- 
+- a new goodness-of-fit statistic was added in gofstat, with corresponding test : 
+the Cramer-von Mises distance
 - a new fitting method has been implemented : the quantile matching estimation (function "qmedist"). 
 For the moment, only available for non censored data.
 - the moment matching estimation has been extended (in function mmedist) to enable numerical 
